[package]
name = "intertrait"
version = "0.1.0"
authors = ["CodeChain Team <hi@codechain.io>"]
license = "MIT OR Apache-2.0"
description = "Allow for inter-trait casting"
edition = "2018"
repository = "https://github.com/CodeChain-io/intertrait"
readme = "README.md"

[dependencies]
once_cell = "1.3.1"
linkme = "0.1.6"
intertrait-macros = { version = "=0.1.0", path = "macros" }

[dev-dependencies]
trybuild = "1.0.23"

[workspace]
members = ["macros"]
