[package]
name = "intertrait"
version = "0.1.1"
authors = ["CodeChain Team <hi@codechain.io>"]
license = "MIT OR Apache-2.0"
description = "Allow for inter-trait casting"
edition = "2018"
repository = "https://github.com/CodeChain-io/intertrait"
readme = "README.md"
categories = ["rust-patterns"]
keywords = ["trait", "cast", "any"]
include = ["src/**/*", "Cargo.toml", "LICENSE-*", "README.md"]

[dependencies]
once_cell = "1.3.1"
linkme = "0.2.1"
intertrait-macros = { version = "=0.1.1", path = "macros" }

[dev-dependencies]
trybuild = "1.0.25"
doc-comment = "0.3.3"

[workspace]
members = ["macros"]
