[package]
name = "intertrait-macros"
description = "Macros for intertrait crate, which allows for direct casting between trait objects"
version = "0.2.2"
authors = ["CodeChain Team <hi@codechain.io>"]
license = "MIT OR Apache-2.0"
edition = "2018"
repository = "https://github.com/CodeChain-io/intertrait"
include = ["src/**/*", "Cargo.toml", "LICENSE-*"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
intertrait = { version = "=0.2.2", path = ".." }
linkme = "0.3"
